--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <h1>Book List
-    <a [routerLink]="['/book-create']" class="btn btn-default btn-lg">
+    <a [routerLink]="['/question-create']" class="btn btn-default btn-lg">
       <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
     </a>
   </h1>
@@ -13,10 +13,9 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let book of books">
-        <td>{{ book.title }}</td>
-        <td>{{ book.author }}</td>
-        <td><a [routerLink]="['/book-details', book._id]">Show Detail</a></td>
+      <tr *ngFor="let question of questions">
+        <td>{{ question.content }}</td>
+        <td><a [routerLink]="['/question-details', question._id]">Show Detail</a></td>
       </tr>
     </tbody>
   </table>
