--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,22 +1,34 @@
-<div class="container">
-  <h1>Book List
-    <a [routerLink]="['/question-create']" class="btn btn-default btn-lg">
-      <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-    </a>
-  </h1>
-  <table class="table">
-    <thead>
-      <tr>
-        <th>Title</th>
-        <th>Author</th>
-        <th>Action</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let game of games">
-        <td>{{ game._id }}</td>
-        <td><a [routerLink]="['/game-details', game._id]">Show Detail</a></td>
-      </tr>
-    </tbody>
-  </table>
+<div class="container-fluid">
+  <div class="row" id="menu">
+    <div class="container">
+      <ul>
+        <li>Pytania</li>
+        <li>Gry</li>
+        <li>O grze</li>
+      </ul>
+    </div>
+  </div>
+  <div class="container white-box">
+    <div class="row">
+      <h1>Book List
+        <a [routerLink]="['/question-create']" class="btn btn-default btn-lg">
+          <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+        </a>
+      </h1>
+    </div>
+    <div id="list">
+      <div *ngFor="let game of games" class="row list-item">
+        <div class="col-10 list-item-info">
+          {{ game._id }}
+        </div>
+        <div class="col-2 list-item-btn">
+          <a [routerLink]="['/game-details', game._id]">
+            <div class="btn btn-success btn-sm">Show Detail
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </div>
