Prace front-endowe.

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -2,9 +2,9 @@
   <div class="row" id="menu">
     <div class="container">
       <ul>
-        <li>Pytania</li>
-        <li>Gry</li>
-        <li>O grze</li>
+        <li class="menu-item"><a [routerLink]="['/questions']">Pytania</a></li>
+        <li class="menu-item"><a [routerLink]="['/games']">Gry</a></li>
+        <li class="menu-item">O grze</li>
       </ul>
     </div>
   </div>
