Prace  ad layoytem.

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -21,25 +21,12 @@
     </div>
   </nav>
   <div class="container white-box">
-    <div class="row" id="list">
-      <div class="col">
-        <div class="row">
-          <a [routerLink]="['/question-create']">
-            <div class="btn btn-success">Dodaj</div>
-          </a>
-        </div>
-        <div *ngFor="let question of questions" class="row list-item">
-          <div class="col-10 list-item-info">
-            {{ question._id }}
-          </div>
-          <div class="col-2 list-item-btn">
-            <a [routerLink]="['/question-details', question._id]">
-              <div class="btn btn-success btn-sm">Szczegóły</div>
-            </a>
-          </div>
-        </div>
-      </div>
-
+    <div class="row">
+      <h2>Lista gier</h2>
+    </div>
+    <div class="row">
+      JOŁ
     </div>
   </div>
 </div>
+
