--- a/src/app/game-detail/game-detail.component.html
+++ b/src/app/game-detail/game-detail.component.html
@@ -1,5 +1,31 @@
-<div class="container">
-  <dl class="list">
-    {{ game|json }}
-  </dl>
+<div class="container-fluid">
+  <nav class="navbar navbar-toggleable-md navbar-inverse bg-primary bg-faded">
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+            data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+            aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <a class="navbar-brand" href="#">Hybrid Quiz Dashboard</a>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          <a class="nav-link" [routerLink]="['/questions']">Pytania</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/games']">Gry</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/about']">O grze</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <div class="container white-box">
+    <div class="row">
+      <h2>Lista gier</h2>
+    </div>
+    <div class="row">
+      {{ game|json }}
+    </div>
+  </div>
 </div>
