--- a/src/app/question-create/question-create.component.html
+++ b/src/app/question-create/question-create.component.html
@@ -1,36 +1,62 @@
-<div class="container">
-  <h1>Add New Book</h1>
-  <div class="row">
-    <div class="col-md-6">
-      <form (ngSubmit)="saveQuestion()" #questionForm="ngForm">
-        <div class="form-group">
-          <label>Content</label>
-          <input type="text" class="form-control" [(ngModel)]="question.content" name="content" required>
+<div class="container-fluid">
+  <nav class="navbar navbar-toggleable-md navbar-inverse bg-primary bg-faded">
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+            data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+            aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <a class="navbar-brand" href="#">Hybrid Quiz Dashboard</a>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          <a class="nav-link" [routerLink]="['/questions']">Pytania</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/games']">Gry</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/about']">O grze</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <div class="container white-box">
+    <div class="row">
+      <h1>Add New Book</h1>
+      <div class="row">
+        <div class="col-md-6">
+          <form (ngSubmit)="saveQuestion()" #questionForm="ngForm">
+            <div class="form-group">
+              <label>Content</label>
+              <input type="text" class="form-control" [(ngModel)]="question.content" name="content" required>
+            </div>
+            <div class="form-group">
+              <label>A</label>
+              <input type="text" class="form-control" [(ngModel)]="question.a" name="a" required>
+            </div>
+            <div class="form-group">
+              <label>B</label>
+              <input type="text" class="form-control" [(ngModel)]="question.b" name="b" required>
+            </div>
+            <div class="form-group">
+              <label>C</label>
+              <input type="number" class="form-control" [(ngModel)]="question.c" name="c" required>
+            </div>
+            <div class="form-group">
+              <label>D</label>
+              <input type="text" class="form-control" [(ngModel)]="question.d" name="d" required>
+            </div>
+            <div class="form-group">
+              <label>T</label>
+              <input type="text" class="form-control" [(ngModel)]="question.t" name="t" required>
+            </div>
+            <div class="form-group">
+              <button type="submit" class="btn btn-success" [disabled]="!questionForm.form.valid">Save</button>
+            </div>
+          </form>
         </div>
-        <div class="form-group">
-          <label>A</label>
-          <input type="text" class="form-control" [(ngModel)]="question.a" name="a" required>
-        </div>
-        <div class="form-group">
-          <label>B</label>
-          <input type="text" class="form-control" [(ngModel)]="question.b" name="b" required>
-        </div>
-        <div class="form-group">
-          <label>C</label>
-          <input type="number" class="form-control" [(ngModel)]="question.c" name="c" required>
-        </div>
-        <div class="form-group">
-          <label>D</label>
-          <input type="text" class="form-control" [(ngModel)]="question.d" name="d" required>
-        </div>
-        <div class="form-group">
-          <label>T</label>
-          <input type="text" class="form-control" [(ngModel)]="question.t" name="t" required>
-        </div>
-        <div class="form-group">
-          <button type="submit" class="btn btn-success" [disabled]="!questionForm.form.valid">Save</button>
-        </div>
-      </form>
+      </div>
     </div>
   </div>
+
 </div>
