--- a/src/app/question-create/question-create.component.html
+++ b/src/app/question-create/question-create.component.html
@@ -22,39 +22,44 @@
   </nav>
   <div class="container white-box">
     <div class="row">
-      <h1>Add New Book</h1>
-      <div class="row">
-        <div class="col-md-6">
-          <form (ngSubmit)="saveQuestion()" #questionForm="ngForm">
-            <div class="form-group">
-              <label>Content</label>
-              <input type="text" class="form-control" [(ngModel)]="question.content" name="content" required>
-            </div>
-            <div class="form-group">
-              <label>A</label>
-              <input type="text" class="form-control" [(ngModel)]="question.a" name="a" required>
-            </div>
-            <div class="form-group">
-              <label>B</label>
-              <input type="text" class="form-control" [(ngModel)]="question.b" name="b" required>
-            </div>
-            <div class="form-group">
-              <label>C</label>
-              <input type="number" class="form-control" [(ngModel)]="question.c" name="c" required>
-            </div>
-            <div class="form-group">
-              <label>D</label>
-              <input type="text" class="form-control" [(ngModel)]="question.d" name="d" required>
-            </div>
-            <div class="form-group">
-              <label>T</label>
-              <input type="text" class="form-control" [(ngModel)]="question.t" name="t" required>
-            </div>
-            <div class="form-group">
-              <button type="submit" class="btn btn-success" [disabled]="!questionForm.form.valid">Save</button>
-            </div>
-          </form>
-        </div>
+      <div class="col-md-12">
+        <h1>Dodaj nowe pytanie</h1>
+      </div>
+      <div class="col-md-12">
+        <form (ngSubmit)="saveQuestion()" #questionForm="ngForm">
+          <div class="form-group">
+            <label>Treść</label>
+            <input type="text" class="form-control" [(ngModel)]="question.content" name="content" required>
+          </div>
+          <div class="form-group">
+            <label>Odpowiedź A</label>
+            <input type="text" class="form-control" [(ngModel)]="question.a" name="a" required>
+          </div>
+          <div class="form-group">
+            <label>Odpowiedź B</label>
+            <input type="text" class="form-control" [(ngModel)]="question.b" name="b" required>
+          </div>
+          <div class="form-group">
+            <label>Odpowiedź C</label>
+            <input type="text" class="form-control" [(ngModel)]="question.c" name="c" required>
+          </div>
+          <div class="form-group">
+            <label>Odpowiedź D</label>
+            <input type="text" class="form-control" [(ngModel)]="question.d" name="d" required>
+          </div>
+          <div class="form-group">
+            <label>T</label>
+            <select class="form-control" [(ngModel)]="question.t" name="t" required>
+              <option value="a">A</option>
+              <option value="a">B</option>
+              <option value="a">C</option>
+              <option value="a">D</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <button type="submit" class="btn btn-success" [disabled]="!questionForm.form.valid">Save</button>
+          </div>
+        </form>
       </div>
     </div>
   </div>
