--- a/src/app/question-edit/question-edit.component.html
+++ b/src/app/question-edit/question-edit.component.html
@@ -22,32 +22,39 @@
   </nav>
   <div class="container white-box">
     <div class="row">
-      <h1>Add New Book</h1>
-      <div class="row">
+      <div class="col-md-12">
+        <h1>Edytuj pytanie</h1><span class="badge">{{ question._id }}</span>
+      </div>
+      <div class="col-md-12">
         <form (ngSubmit)="updateQuestion(question._id)" #questionForm="ngForm">
           <div class="form-group">
             <label>Content</label>
             <input type="text" class="form-control" [(ngModel)]="question.content" name="content" required>
           </div>
           <div class="form-group">
-            <label>A</label>
+            <label>Odpowiedź A</label>
             <input type="text" class="form-control" [(ngModel)]="question.a" name="a" required>
           </div>
           <div class="form-group">
-            <label>B</label>
+            <label>Odpowiedź B</label>
             <input type="text" class="form-control" [(ngModel)]="question.b" name="b" required>
           </div>
           <div class="form-group">
-            <label>C</label>
+            <label>Odpowiedź C</label>
             <input type="text" class="form-control" [(ngModel)]="question.c" name="c" required>
           </div>
           <div class="form-group">
-            <label>D</label>
+            <label>Odpowiedź D</label>
             <input type="text" class="form-control" [(ngModel)]="question.d" name="d" required>
           </div>
           <div class="form-group">
             <label>T</label>
-            <input type="text" class="form-control" [(ngModel)]="question.t" name="t" required>
+            <select class="form-control" [(ngModel)]="question.t" name="t" required>
+              <option value="a">A</option>
+              <option value="a">B</option>
+              <option value="a">C</option>
+              <option value="a">D</option>
+            </select>
           </div>
           <div class="form-group">
             <button type="submit" class="btn btn-success" [disabled]="!questionForm.form.valid">Save</button>
