Dodano efekt active.

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -6,11 +6,11 @@
     <a class="navbar-brand" href="#">Hybrid Quiz Dashboard</a>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" [routerLink]="['/questions']">Pytania</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/games']">Gry</a>
+          <a class="nav-link active" [routerLink]="['/games']">Gry</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/about']">O grze</a>
