--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -8,14 +8,14 @@
     <a class="navbar-brand" href="#">Hybrid Quiz Dashboard</a>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" [routerLink]="['/questions']">Pytania</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/games']">Gry</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/about']">O grze</a>
+          <a class="nav-link active" [routerLink]="['/about']">O grze</a>
         </li>
       </ul>
     </div>
