--- a/src/app/question-detail/question-detail.component.html
+++ b/src/app/question-detail/question-detail.component.html
@@ -8,8 +8,8 @@
     <a class="navbar-brand" href="#">Hybrid Quiz Dashboard</a>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-          <a class="nav-link" [routerLink]="['/questions']">Pytania</a>
+        <li class="nav-item">
+          <a class="nav-link active" [routerLink]="['/questions']">Pytania</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/games']">Gry</a>
