--- a/src/app/question-create/question-create.component.html
+++ b/src/app/question-create/question-create.component.html
@@ -49,11 +49,11 @@
           </div>
           <div class="form-group">
             <label>T</label>
-            <select class="form-control" [(ngModel)]="question.t" name="t" required>
-              <option value="a">A</option>
-              <option value="a">B</option>
-              <option value="a">C</option>
-              <option value="a">D</option>
+            <select class="form-control" [(ngModel)]="question.t" name="t" required value="A">
+              <option value="A">A</option>
+              <option value="B">B</option>
+              <option value="C">C</option>
+              <option value="D">D</option>
             </select>
           </div>
           <div class="form-group">
