--- a/src/app/question-edit/question-edit.component.html
+++ b/src/app/question-edit/question-edit.component.html
@@ -23,7 +23,7 @@
   <div class="container white-box">
     <div class="row">
       <div class="col-md-12">
-        <h1>Edytuj pytanie</h1><span class="badge">{{ question._id }}</span>
+        <h1>Edytuj pytanie</h1>
       </div>
       <div class="col-md-12">
         <form (ngSubmit)="updateQuestion(question._id)" #questionForm="ngForm">
@@ -50,10 +50,10 @@
           <div class="form-group">
             <label>T</label>
             <select class="form-control" [(ngModel)]="question.t" name="t" required>
-              <option value="a">A</option>
-              <option value="a">B</option>
-              <option value="a">C</option>
-              <option value="a">D</option>
+              <option value="A">A</option>
+              <option value="B">B</option>
+              <option value="C">C</option>
+              <option value="D">D</option>
             </select>
           </div>
           <div class="form-group">
