--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -34,7 +34,7 @@
             {{ question.content }}
           </div>
           <div class="col-2 list-item-btn">
-            <a [routerLink]="['/question-details', question._id]">
+            <a [routerLink]="['/question-detail', question._id]">
               <div class="btn btn-success btn-sm">Szczegóły</div>
             </a>
           </div>
