--- a/src/app/question-create/question-create.component.html
+++ b/src/app/question-create/question-create.component.html
@@ -1,13 +1,17 @@
-<div class="container-fluid">
-  <nav class="navbar navbar-toggleable-md navbar-inverse bg-primary bg-faded">
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-            data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
-            aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <a class="navbar-brand" href="#">Hybrid Quiz Dashboard</a>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav ml-auto">
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+              aria-expanded="false" aria-controls="navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Hybrid Quiz Dashboard</a>
+    </div>
+    <div id="navbar" class="navbar-collapse collapse navbar-right">
+      <ul class="nav navbar-nav">
         <li class="nav-item">
           <a class="nav-link active" [routerLink]="['/questions']">Pytania</a>
         </li>
@@ -18,14 +22,18 @@
           <a class="nav-link" [routerLink]="['/about']">O grze</a>
         </li>
       </ul>
-    </div>
-  </nav>
+    </div><!--/.navbar-collapse -->
+  </div>
+</nav>
+
+
+<div class="container-fluid">
   <div class="container white-box">
     <div class="row">
-      <div class="col-md-12">
-        <h1>Dodaj nowe pytanie</h1>
-      </div>
-      <div class="col-md-12">
+      <h2>Dodaj pytanie </h2>
+    </div>
+
+    <div class="row" id="question-add">
         <form (ngSubmit)="saveQuestion()" #questionForm="ngForm">
           <div class="form-group">
             <label>Treść</label>
@@ -62,6 +70,5 @@
         </form>
       </div>
     </div>
-  </div>
 
 </div>
