--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -34,7 +34,25 @@
     </div>
 
     <div class="row" id="about">
-      about
+      <b>Hybrid Quiz</b> to gra sieciowa umożliwiająca grę między dwoma graczami w czasie rzeczywistym. Gra wzorowana jest na znanym
+      wszystkim modelu QUIZ.<br><br>
+
+      Zasady gry:
+      <ul>
+        <li>1. Użytkownik wybiera przeciwnika poprzez zaproszenie, lub sam zostaje zaproszony,</li>
+        <li>2. W grze uczestniczy dwóch graczy,</li>
+        <li>3. Gracze odpowiada na X losowo wybranych pytań, wybierając spośród odpowiedzi A, B, C, D.</li>
+        <li>4. Gra trwa Y sekund,</li>
+        <li>5. W przypadku upływu czasu, gra jest przerywana, a rezultat ustalany jest na podstawie dotychczasowo udzielonych odpowiedzi,</li>
+        <li>6. Wygrywa użytkownik który udzielił większej liczby poprawnych odpowiedzi.</li>
+      </ul>
+      <p>Gdzie X i Y są wartościami ustalonymi przez administratora gry.</p><br>
+
+
+      <b>Gra jest projektem pracy inżynierskiej napisanej przez Rafała Malika pod przewodnictwem naukowym dr inż. Ireneusza Gościniaka.</b><br>
+
+      <b>Hybrid Quiz Dashboard</b> to panel administracyjny stworzony w technologiach javascriptowych, umożliwiający zarządanie pytaniami dostępnymi w grze
+      oraz przegląd historii odbytych gier.
     </div>
 
   </div>
