Poprawiono problem z wyswietlaniem nieskonczonych gier.

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -51,7 +51,7 @@
 
       <b>Gra jest projektem pracy inżynierskiej napisanej przez Rafała Malika pod przewodnictwem naukowym dr inż. Ireneusza Gościniaka.</b><br>
 
-      <b>Hybrid Quiz Dashboard</b> to panel administracyjny stworzony w technologiach javascriptowych, umożliwiający zarządanie pytaniami dostępnymi w grze
+      <br><b>Hybrid Quiz Dashboard</b> to panel administracyjny stworzony w technologiach javascriptowych, umożliwiający zarządanie pytaniami dostępnymi w grze
       oraz przegląd historii odbytych gier.
     </div>
 
